k8s/deployments/nginx/nginx.yml
---

kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    name: nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      #  nodePort: 30080
      targetPort: 80
  selector:
    app: nginx

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "*"
    - port:
        number: 443
        name: https-nginx
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "nginx.192.168.33.16.nip.io"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: nginx
spec:
  hosts:
    - "nginx.192.168.33.16.nip.io"
  gateways:
    - nginx
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nginx
            port:
              number: 80
